test/domains/claridge/associativeStridableQuery.good
associativeStridableQuery.chpl:2: error: associative domains do not support .stridable
